# pico-hd6303

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  hardware.h  hd6303.h  hd6303_pi.pio  main.c
hw/: pico-hd6303.brd  pico-hd6303.sch
support/: DEVMAP.INC
support/ASM/: Makefile  UART.ASM
support/BOOTROM/: BOOTMEM.INC  BOOTROM.ASM  BOOTROM.INC  Makefile
